--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,6 @@
 .mainContentContainer {
   display: flex;
+  flex: 1;
   flex-direction: column;
   margin: 1.5rem 0.5rem 0;
 }
@@ -47,6 +48,7 @@
 
  .productsContainer{
   display: flex;
+  width: 100%;
   flex-direction: column;
   gap: 3rem;
   
